; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-fs-copyfile.c_touch_file.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-fs-copyfile.c_touch_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@O_WRONLY = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@O_TRUNC = common dso_local global i32 0, align 4
@S_IWUSR = common dso_local global i32 0, align 4
@S_IRUSR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"a\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @touch_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @touch_file(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %10 = load i8*, i8** %3, align 8
  %11 = load i32, i32* @O_WRONLY, align 4
  %12 = load i32, i32* @O_CREAT, align 4
  %13 = or i32 %11, %12
  %14 = load i32, i32* @O_TRUNC, align 4
  %15 = or i32 %13, %14
  %16 = load i32, i32* @S_IWUSR, align 4
  %17 = load i32, i32* @S_IRUSR, align 4
  %18 = or i32 %16, %17
  %19 = call i32 @uv_fs_open(i32* null, i32* %6, i8* %10, i32 %15, i32 %18, i32* null)
  store i32 %19, i32* %8, align 4
  %20 = call i32 @uv_fs_req_cleanup(i32* %6)
  %21 = load i32, i32* %8, align 4
  %22 = icmp sge i32 %21, 0
  %23 = zext i1 %22 to i32
  %24 = call i32 @ASSERT(i32 %23)
  %25 = load i32, i32* %8, align 4
  store i32 %25, i32* %5, align 4
  %26 = call i32 @uv_buf_init(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 1)
  store i32 %26, i32* %7, align 4
  store i32 0, i32* %9, align 4
  br label %27

27:                                               ; preds = %40, %2
  %28 = load i32, i32* %9, align 4
  %29 = load i32, i32* %4, align 4
  %30 = icmp ult i32 %28, %29
  br i1 %30, label %31, label %43

31:                                               ; preds = %27
  %32 = load i32, i32* %5, align 4
  %33 = load i32, i32* %9, align 4
  %34 = call i32 @uv_fs_write(i32* null, i32* %6, i32 %32, i32* %7, i32 1, i32 %33, i32* null)
  store i32 %34, i32* %8, align 4
  %35 = call i32 @uv_fs_req_cleanup(i32* %6)
  %36 = load i32, i32* %8, align 4
  %37 = icmp sge i32 %36, 0
  %38 = zext i1 %37 to i32
  %39 = call i32 @ASSERT(i32 %38)
  br label %40

40:                                               ; preds = %31
  %41 = load i32, i32* %9, align 4
  %42 = add i32 %41, 1
  store i32 %42, i32* %9, align 4
  br label %27

43:                                               ; preds = %27
  %44 = load i32, i32* %5, align 4
  %45 = call i32 @uv_fs_close(i32* null, i32* %6, i32 %44, i32* null)
  store i32 %45, i32* %8, align 4
  %46 = call i32 @uv_fs_req_cleanup(i32* %6)
  %47 = load i32, i32* %8, align 4
  %48 = icmp eq i32 %47, 0
  %49 = zext i1 %48 to i32
  %50 = call i32 @ASSERT(i32 %49)
  ret void
}

declare dso_local i32 @uv_fs_open(i32*, i32*, i8*, i32, i32, i32*) #1

declare dso_local i32 @uv_fs_req_cleanup(i32*) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_buf_init(i8*, i32) #1

declare dso_local i32 @uv_fs_write(i32*, i32*, i32, i32*, i32, i32, i32*) #1

declare dso_local i32 @uv_fs_close(i32*, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
